// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly when a single expense is provided 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $90.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly when a single expense is provided 2`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totaling 
    $900.00
  </h1>
</div>
`;
